Fix dropdown editor visibility

--- a/community-edition/packages/ComboBox/style/base.scss
+++ b/community-edition/packages/ComboBox/style/base.scss
@@ -189,6 +189,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  position: relative;
 }
 
 // quick fix, remove outline from focusalbe elements
